Updated score system
